--- a/index.html
+++ b/index.html
@@ -165,6 +165,172 @@
           </div>
         </div>
         <!-- intro end -->
+        <!-- news start -->
+        <div
+          class="news section full-size center-item"
+          id="news"
+          data-scroll-section
+        >
+          <!-- bg start -->
+          <div class="bg-container full-size">
+            <div
+              class="parallax-container full-size"
+              data-scroll
+              data-scroll-speed="0.5"
+              data-scroll-delay="0.5"
+              style="background: url(./images/line-6.jpg) no-repeat"
+            ></div>
+          </div>
+          <!-- bg end -->
+          <!-- img start -->
+          <div class="mini-container full-size center-item">
+            <div class="img-box">
+              <img src="./images/banner.jpg" alt="error" />
+            </div>
+          </div>
+          <!-- img end -->
+          <div class="text-box">
+            <h1 class="title">We are Mary Kay, Exclusively Premium.</h1>
+          </div>
+        </div>
+        <!-- news end -->
+        <!-- challenge start -->
+        <div
+          class="challange section center-item"
+          id="challanges"
+          data-scroll-section
+        >
+          <div class="container full-size center-item">
+            <h1 class="title-3">
+              “Mary Kay, we are <br />
+              welcoming challenges to foster <br />our beauty. People inspire us
+              <br />
+              and we want to inspire <br />
+              them too.”
+            </h1>
+          </div>
+        </div>
+        <!-- challenge end -->
+        <!-- contact start  -->
+        <div class="contact section flex" id="contact" data-scroll-section>
+          <div class="left-contact center-item">
+            <p class="paragraph">BE CONNECTED</p>
+            <h4 class="sub-title">
+              Join our newsletter and be informed of our news and exceptional
+              sales.
+            </h4>
+            <form action="#" class="form-sub center-item">
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Email"
+                required
+              />
+              <input type="submit" value="Subcribe" class="submit-btn" />
+            </form>
+          </div>
+          <div class="right-contact center-item">
+            <h1 class="title-3">2020</h1>
+            <h1 class="title-3">SHARE US</h1>
+            <h1 class="title-3">FOLLOW US</h1>
+            <h1 class="title-3">CONNECT</h1>
+            <h1 class="title-3">TODAY</h1>
+            <div class="img-box center-item">
+              <img src="./images/banner.jpg" alt="error" />
+            </div>
+          </div>
+        </div>
+        <!-- contact end -->
+        <!-- oth start -->
+        <div
+          class="oth section full-size pad-section"
+          id="oth"
+          data-scroll-section
+        >
+          <div class="mini-container center-item full-size">
+            <p class="paragraph p-one">OUR OATH AND PHILOSOPHY</p>
+            <h1 class="title-2">Mary Kay</h1>
+            <div class="oth-content row">
+              <div class="left-oth full-size center-item">
+                <p class="paragraph thin-p">
+                  INNOVATION, CREATIVITY, AND SOCIAL COMMITMENT ARE OUR GREATEST
+                  VALUES. PROFESSIONALISM AND THE SCIENCE THAT EVERY DAY IS A
+                  NEW DAY TO SURPRISE EVERYONE AND EVERYTHING. WE VALUE THE
+                  ETHICS OF MEETING ALL THE EXPECTATIONS OF EACH CUSTOMER WHO
+                  TRUSTS IN OUR SERIOUS AND HARD WORK.
+                </p>
+                <p class="paragraph">
+                  Provide unique experiences for everyone involved with a brand.
+                  A trip without time, igniting a flame of enthusiasm and
+                  curiosity for each one. Be striking, unique, and
+                  extraordinary. Providing benefits for beauty, and at the same
+                  time, fun with our unique way of being. Our greatest mission
+                  is required according to our ideals
+                </p>
+              </div>
+              <div class="right-oth full-size center-item">
+                <p class="paragraph">
+                  We are not just a brand of nutritional cosmetics, cosmetics,
+                  and cosmetics, we are a company of excellence in the
+                  international market for processing and marketing high-quality
+                  products and continuing to expand in the market in which we
+                  operate.
+                </p>
+                <p class="paragraph">
+                  With a commitment to the continuous improvement of its
+                  products and sustainable development and profitability in its
+                  business. Encouraging our customers engaged in our lifestyle,
+                  participating in causes, sending life rewards those who sow or
+                  well. Taking care of our planet, with products that are less
+                  and less harmful to the environment, because our castle is our
+                  land.
+                </p>
+              </div>
+            </div>
+            <a href="#" class="btn center-item" data-name="ABOUT US">
+              <span>ABOUT US</span>
+            </a>
+          </div>
+        </div>
+        <!-- oth end -->
+        <!-- footer start -->
+        <footer
+          class="footer section full-size center-item"
+          id="footer"
+          data-scroll-section
+        >
+          <div class="mini-container full-size flex">
+            <div class="left-foot">
+              <p class="paragraph">WELCOME TO OUR WORLD</p>
+              <h1 class="title-2">MARY KAY</h1>
+              <div class="footer-links row">
+                <div class="left-links">
+                  <p class="paragraph p-one">MENU</p>
+                  <a href="#" class="btn">Home</a>
+                  <a href="#" class="btn">About</a>
+                  <a href="#" class="btn">Products</a>
+                  <a href="#" class="btn">Gallery</a>
+                  <a href="#" class="btn">Contact</a>
+                </div>
+                <div class="right-links">
+                  <p class="paragraph p-one">SUPPORT</p>
+                  <a href="#" class="btn">Terms & Conditions</a>
+                  <a href="#" class="btn">Privacy Policy</a>
+                  <a href="#" class="btn">Legal Mention</a>
+                </div>
+              </div>
+            </div>
+            <div class="right-foot">
+              <p class="paragraph">
+                Provide unique experiences for everyone involved with a brand. A
+                trip without time, igniting a flame of enthusiasm and curiosity
+                for each one.
+              </p>
+            </div>
+          </div>
+        </footer>
+        <!-- footer end -->
       </div>
       <!-- scroll container end -->
     </div>
