add new animations

--- a/index.html
+++ b/index.html
@@ -29,6 +29,38 @@
       </div>
     </nav>
     <!-- nav end -->
+
+    <!-- hamb menu start -->
+    <div class="hamb__menu center-item" id="hamb__menu">
+      <a class="btn hover-btn close-btn" id="close-btn">CLOSE</a>
+      <div class="hamb-links start-item">
+        <p class="paragraph">MENU</p>
+        <a href="#" class="btn hover-btn hamb-btn">Home</a>
+        <a href="#" class="btn hover-btn hamb-btn">About</a>
+        <a href="#" class="btn hover-btn hamb-btn">Product</a>
+        <a href="#" class="btn hover-btn hamb-btn">Gallery</a>
+        <a href="#" class="btn hover-btn hamb-btn">Contact</a>
+      </div>
+      <div class="hamb-links-two start-item">
+        <p class="paragraph">SUPPORT</p>
+        <a href="#" class="btn hover-btn hamb-btn-two">TERMS & CONDITIONS</a>
+        <a href="#" class="btn hover-btn hamb-btn-two">PRIVACY POLICIES</a>
+        <a href="#" class="btn hover-btn hamb-btn-two">LEGAL MENTIONS</a>
+      </div>
+      <p class="paragraph dev-p">
+        Devlop by :
+        <span
+          ><a
+            href="https://github.com/MAGGIx1404"
+            target="blank"
+            class="btn hover-btn"
+            >MAGGI</a
+          ></span
+        >
+      </p>
+    </div>
+    <!-- hamb menu end -->
+
     <!-- wrapper start -->
     <div class="wrapper" id="wrapper">
       <!-- scroll container start -->
@@ -307,17 +339,17 @@
               <div class="footer-links row">
                 <div class="left-links">
                   <p class="paragraph p-one">MENU</p>
-                  <a href="#" class="btn">Home</a>
-                  <a href="#" class="btn">About</a>
-                  <a href="#" class="btn">Products</a>
-                  <a href="#" class="btn">Gallery</a>
-                  <a href="#" class="btn">Contact</a>
+                  <a href="#" class="btn hover-btn">Home</a>
+                  <a href="#" class="btn hover-btn">About</a>
+                  <a href="#" class="btn hover-btn">Products</a>
+                  <a href="#" class="btn hover-btn">Gallery</a>
+                  <a href="#" class="btn hover-btn">Contact</a>
                 </div>
                 <div class="right-links">
                   <p class="paragraph p-one">SUPPORT</p>
-                  <a href="#" class="btn">Terms & Conditions</a>
-                  <a href="#" class="btn">Privacy Policy</a>
-                  <a href="#" class="btn">Legal Mention</a>
+                  <a href="#" class="btn hover-btn">Terms & Conditions</a>
+                  <a href="#" class="btn hover-btn">Privacy Policy</a>
+                  <a href="#" class="btn hover-btn">Legal Mention</a>
                 </div>
               </div>
             </div>
@@ -326,6 +358,17 @@
                 Provide unique experiences for everyone involved with a brand. A
                 trip without time, igniting a flame of enthusiasm and curiosity
                 for each one.
+              </p>
+              <p class="paragraph p-one">
+                Develop by :
+                <span
+                  ><a
+                    href="https://github.com/MAGGIx1404"
+                    target="blank"
+                    class="btn hover-btn"
+                    >MAGGI</a
+                  ></span
+                >
               </p>
             </div>
           </div>
