add webgl slider

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="hover-btn transition">SHOP</div>
         </a>
         <!-- shop btn end -->
-        <a href="#" class="btn logo-btn">
+        <a class="btn logo-btn" id="logo__btn" style="cursor: pointer">
           <img src="./icons/logo.svg" alt="error" class="logo transition" />
         </a>
         <!-- hamb start -->
@@ -36,7 +36,7 @@
       <div class="hamb-links start-item">
         <p class="paragraph">MENU</p>
         <a href="#" class="btn hover-btn hamb-btn">Home</a>
-        <a href="#" class="btn hover-btn hamb-btn">About</a>
+        <a href="./pages/gallery.html" class="btn hover-btn hamb-btn">About</a>
         <a href="#" class="btn hover-btn hamb-btn">Product</a>
         <a href="#" class="btn hover-btn hamb-btn">Gallery</a>
         <a href="#" class="btn hover-btn hamb-btn">Contact</a>
@@ -340,7 +340,7 @@
                 <div class="left-links">
                   <p class="paragraph p-one">MENU</p>
                   <a href="#" class="btn hover-btn">Home</a>
-                  <a href="#" class="btn hover-btn">About</a>
+                  <a href="./pages/gallery.html" class="btn hover-btn">About</a>
                   <a href="#" class="btn hover-btn">Products</a>
                   <a href="#" class="btn hover-btn">Gallery</a>
                   <a href="#" class="btn hover-btn">Contact</a>
