--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="hamb-links start-item">
         <p class="paragraph">MENU</p>
         <a href="#" class="btn hover-btn hamb-btn">Home</a>
-        <a href="./pages/gallery.html" class="btn hover-btn hamb-btn">About</a>
+        <a href="#" class="btn hover-btn hamb-btn">About</a>
         <a href="#" class="btn hover-btn hamb-btn">Product</a>
         <a href="#" class="btn hover-btn hamb-btn">Gallery</a>
         <a href="#" class="btn hover-btn hamb-btn">Contact</a>
@@ -340,7 +340,7 @@
                 <div class="left-links">
                   <p class="paragraph p-one">MENU</p>
                   <a href="#" class="btn hover-btn">Home</a>
-                  <a href="./pages/gallery.html" class="btn hover-btn">About</a>
+                  <a href="#" class="btn hover-btn">About</a>
                   <a href="#" class="btn hover-btn">Products</a>
                   <a href="#" class="btn hover-btn">Gallery</a>
                   <a href="#" class="btn hover-btn">Contact</a>
